--- a/index.html
+++ b/index.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forms</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <h2>Formulário de Contato</h2>
+        <form action="process.php" method="post">
+            <label for="name">Nome:</label><br>
+            <input type="text" id="name" name="name" required><br><br>
+            <label for="email">E-mail:</label><br>
+            <input type="email" name="email" id="email" required><br><br>
+            <label for="message">Mensagem:</label><br>
+            <textarea name="message" id="message" rows="4" required></textarea><br><br>
+            <input type="submit" value="Enviar">
+        </form>
+    </div>
 </body>
 </html>
