--- a/index.html
+++ b/index.html
@@ -7,17 +7,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <h2>Formulário de Contato</h2>
-        <form action="process.php" method="post">
-            <label for="name">Nome:</label><br>
-            <input type="text" id="name" name="name" required><br><br>
-            <label for="email">E-mail:</label><br>
-            <input type="email" name="email" id="email" required><br><br>
-            <label for="message">Mensagem:</label><br>
-            <textarea name="message" id="message" rows="4" required></textarea><br><br>
-            <input type="submit" value="Enviar">
-        </form>
-    </div>
+    <main>
+        <div class="container">
+            <h2>Formulário de Contato</h2>
+            <form action="process.php" method="post">
+                <label for="name">Nome:</label><br>
+                <input type="text" id="name" name="name" required><br><br>
+                <label for="email">E-mail:</label><br>
+                <input type="email" name="email" id="email" required><br><br>
+                <label for="message">Mensagem:</label><br>
+                <textarea name="message" id="message" rows="4" required></textarea><br><br>
+                <input type="submit" value="Enviar">
+            </form>
+        </div>
+    </main>
 </body>
 </html>
